# gfx_portfolio

./: .gitignore  Cargo.toml  build.rs  index.html
demolib/: Cargo.toml  build.rs
demolib/resources/models/: torus.usda
demolib/resources/shaders/: mandelbrot.fs  mandelbrot.vs  model_3d.fs  model_3d.vs  triangle.fs  triangle.vs
demolib/src/: lib.rs  mandelbrot.rs  model_3d.rs  triangle.rs
docs/: index.html  portfolio.js
portfolio/: Cargo.toml  build.rs  index.html  lib.rs  main.rs  triangle.rs  workspace.rs
portfolio/res/shaders/: draw_texture.fs  draw_texture.vs
portfolio/resources/shaders/: triangle.fs  triangle.vs
portfolio/src/: lib.rs  main.rs  mandelbrot.rs  property_panel.rs  workspace.rs
triangle/: Cargo.toml
triangle/src/: main.rs
