[package]
name = "standalone"
edition = "2021"
version = "0.1.0"

[lib]
name = "demolib"
path = "portfolio/lib.rs"

[[bin]]
name = "portfolio"
path = "portfolio/main.rs"

[dependencies]
eframe = { version = "0.22.0", default-features=false, features = ["wgpu", "accesskit", "default_fonts"] }

# wgpu の webgl 指定を明示しないとウェブむけビルドが通らない
wgpu = { version = "0.16.0", features = ["spirv", "webgl"] }

# eframe に合わせる
wasm-bindgen-futures = "*"

# wgpu の
parking_lot = "0.12"

# wgpu でバッファーに書き込処理の実装に必要なクレートたち
bytemuck = "*"
futures = "*"
futures-intrusive = "*"


# rt-multi-thread はネイティブのみ
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.29", features = ["sync", "macros", "io-util", "rt", "time"] }


[build-dependencies]
naga = { version = "0.12.2", features = ["glsl-in", "spv-out"] }
