[workspace]
resolver = "2"
members = [
    "demolib",
    "portfolio",
    "triangle"
]
default-members = ["portfolio"]

[workspace.dependencies]
eframe = { version = "0.23.0", default-features=false, features = ["wgpu", "accesskit", "default_fonts", "persistence"] }

# eframe の内部で参照している wgpu のバージョンと合わせる
wgpu = { version = "0.17.0", features = [ "spirv", "webgl", "vulkan-portability"] }

# wgpu が参照している winit のバージョンと合わせる
winit = "0.28.7"

naga = { version = "0.13.0", features = ["glsl-in", "wgsl-out"] }
