[package]
name = "triangle"
edition = "2021"
version = "0.1.0"

[dependencies]
demolib = { path = "../demolib" }

wgpu = { workspace = true }


winit = { workspace = true }

# eframe に合わせる
wasm-bindgen-futures = "*"

# wgpu の
parking_lot = "0.12"

# wgpu でバッファーに書き込処理の実装に必要なクレートたち
bytemuck = "*"
futures = "*"
futures-intrusive = "*"


# rt-multi-thread はネイティブのみ
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.29", features = ["sync", "macros", "io-util", "rt", "time"] }
